<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Run Java</string>
    <string name="enter_your_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus_sign">-</string>
    <string name="initial_quantity">2</string>
    <string name="plus_sign">+</string>
    <string name="order">Order</string>
    <string name="lowest_quantity_limit_message">quantity can\'t be less than 1</string>
    <string name="highest_quantity_limit_message">quantity can\'t be more than 100</string>
    <string name="order_subject">Just java order for <xliff:g example="Aarti" id="name">%s</xliff:g></string>
    <string name="unhandled_intent_message">No application can handle this action</string>
    <string name="customer_name">"Name: "<xliff:g example="Aarti" id="name">%s</xliff:g></string>
    <string name="add_whipped_cream">"\nAdd whipped cream? "</string>
    <string name="add_chocolate">"\nAdd chocolate? "</string>
    <string name="total_quantity">"\nQuantity: "</string>
    <string name="total">"\nTotal: "</string>
    <string name="thank_you_message">\nThank you!</string>
</resources>